# natrix

./: .bumpversion.cfg  .conflict-files  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  controller_call_graph.md  create_loan_graph.md  index.html  mkdocs.yml  pyproject.toml  repay_call_graph.md
.auto-resolution/: .gitignore  .pre-commit-hooks.yaml  mkdocs.yml  pyproject.toml
.auto-resolution/docs/api/: index.md
.auto-resolution/docs/development/: index.md
.auto-resolution/docs/rules/: argument-naming.md  constant-naming.md  implicit-export.md  implicit-internal.md  index.md  memory-expansion.md  print-left.md  storage-caching.md  unused-variable.md
.auto-resolution/natrix/: __init__.py  ast_node.py
.auto-resolution/natrix/rules/: common.py  implicit_export.py  implicit_pure.py  implicit_view.py  memory_expansion.py  storage_caching.py
.auto-resolution/tests/: test_ast_tools.py
.auto-resolution/tests/contracts/: for_loop_underscore.vy  unused_import.vy  version_dummy.vy
.auto-resolution/tests/rules/: test_arg_naming_convention.py  test_implicit_export.py  test_unused_arg.py  test_unused_variable.py
.conflict-base-0/: pyproject.toml
.conflict-base-0/docs/: index.md  quick-start.md
.conflict-base-0/natrix/: ast_tools.py
.conflict-base-0/natrix/rules/: unused_variable.py
.conflict-base-0/tests/e2e/: conftest.py
.conflict-base-0/tests/rules/: test_implicit_view.py  test_print_left.py  test_unused_arg.py
.conflict-side-0/: README.md  pyproject.toml
.conflict-side-0/.github/workflows/: ci.yaml
.conflict-side-0/docs/: configuration.md  quick-start.md
.conflict-side-0/docs/rules/: implicit-pure.md  implicit-view.md
.conflict-side-0/natrix/: __main__.py
.conflict-side-0/tests/contracts/: Twocrypto.vy  scrvusd_oracle.vy
.conflict-side-1/: README.md  pyproject.toml
.conflict-side-1/.github/workflows/: release.yml
.conflict-side-1/natrix/rules/: implicit_internal.py
.conflict-side-1/tests/contracts/: unused_import.vy
.conflict-side-1/tests/e2e/: test_behavior_stability.py
.conflict-side-1/tests/rules/: test_implicit_pure.py  test_memory_allocation.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yml
CONTRIBUTING/: index.html
api/: index.html
configuration/: index.html
development/: index.html
docs/: CONTRIBUTING.md  configuration.md  metadata-limitations.md  quick-start.md
docs/api/: index.md
docs/development/: index.md
docs/rules/: implicit-export.md  index.md  memory-expansion.md  modifiers-ordering.md  unused-argument.md  unused-event.md  unused-imports.md  unused-variable.md
metadata-limitations/: index.html
natrix/: __init__.py  ast_node.py  ast_tools.py  codegen.py  context.py  main.py  utils.py
natrix/rules/: __init__.py  arg_naming_convention.py  common.py  constants_naming.py  dynarray_overallocation.py  implicit_export.py  implicit_internal.py  implicit_pure.py  implicit_view.py  memory_expansion.py  modifiers_ordering.py  print_left.py  storage_analysis.py  storage_caching.py  unused_arg.py  unused_event.py  unused_imports.py  unused_variable.py
quick-start/: index.html
rules/: index.html
rules/argument-naming/: index.html
rules/constant-naming/: index.html
rules/implicit-export/: index.html
rules/implicit-internal/: index.html
rules/implicit-pure/: index.html
rules/implicit-view/: index.html
rules/memory-expansion/: index.html
rules/modifiers-ordering/: index.html
rules/print-left/: index.html
rules/storage-caching/: index.html
rules/unused-argument/: index.html
rules/unused-event/: index.html
rules/unused-imports/: index.html
rules/unused-variable/: index.html
scripts/: run-ci.sh
search/: search_index.json
tests/: CONTRIBUTING.md  conftest.py  test_ast_tools.py  test_codegen.py  test_constants_naming.py  test_context.py  test_dynarray_overallocation.py  test_memory_allocation.py  test_print_left.py  test_unused_arg.vy
tests/contracts/: TWA.vy  Twocrypto.vy  ast.json  for_loop_underscore.vy  metadata.json  ownable.vy  scrvusd_oracle.vy  test_modifiers_ordering.vy  test_unused_arg.vy  test_unused_event.vy  test_unused_imports.vy  uncached.vy  unused_import.vy  version_dummy.vy
tests/e2e/: conftest.py  test_behavior_stability.py  test_fee_splitter.py  test_snekmate01_ownable.py  test_twa.py  test_uncached.py  test_unused_import.py  test_version_dummy.py
tests/rules/: test_arg_naming_convention.py  test_constants_naming.py  test_implicit_export.py  test_implicit_internal.py  test_implicit_pure.py  test_implicit_view.py  test_memory_allocation.py  test_modifiers_ordering.py  test_print_left.py  test_storage_caching.py  test_unused_arg.py  test_unused_event.py  test_unused_imports.py  test_unused_variable.py
(+22 files in other folders)
