[project]
name = "natrix"
version = "0.1.7"
description = "A Vyper linter for fine sneks."
readme = "README.md"
authors = [{ name = "Alberto Centonze", email = "albicento.ac@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["tomli>=2.0.0; python_version < '3.11'"]
[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-xdist>=3.6.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
    "vyper==0.4.2",
    "snekmate==0.1.2rc1",
    "bump2version>=1.0.1",
    "mypy>=1.16.0",
    "types-toml>=0.10.8.20240310",
    "types-setuptools>=80.9.0.20250529",
]
[project.scripts]
natrix = "natrix.__main__:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
