[project]
name = "natrix"
version = "0.1.4"
description = "A Vyper linter for fine sneks."
readme = "README.md"
authors = [
    { name = "Alberto Centonze", email = "albicento.ac@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
]
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
    "vyper==0.4.1",
    "snekmate==0.1.1",
]
[project.scripts]
natrix = "natrix.__main__:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
